--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-BBBBBBBBBBBBBB
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/global_style.css">
+    <script src="https://kit.fontawesome.com/798abe29a3.js" crossorigin="anonymous"></script>
+    <title>Accueil - Sauveteurs du dunkerquois</title>
+</head>
+<body>
+    <header>
+        <a class="link-home font-title" href="index.html" title="Accueil">Sauveteurs du dunkerquois</a>
+        <nav class="menu-header">
+            <ul class="menu-social">
+                <li><a><i class="fab fa-facebook"></i></a></li>
+                <li><a><i class="fab fa-twitter"></i></a></li>
+                <li><a><i class="fas fa-envelope"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+</body>
+</html>
