--- a/form.html
+++ b/form.html
@@ -20,10 +20,10 @@
 			</nav>
 		</header>
 		<main>
-			<p>Texte avant le formulaire</p>
-
-			<form>
-				<p>Texte à l'intérieur du formulaire</p>
+			<form action="form.php" method="post">
+				Name: <input type="text" name="name"><br>
+				E-mail: <input type="text" name="email"><br>
+				<input type="submit">
 			</form>
 
 			<p>Texte après le formulaire</p>
