Champ autofocus + date

--- a/form.html
+++ b/form.html
@@ -21,10 +21,10 @@
 		</header>
 		<main>
 			<form action="form.php" method="post">
-				<label for="nom">Nom</label>: <input type="text" name="nom" id="nom"><br>
+				<label for="nom">Nom</label>: <input type="text" name="nom" id="nom" autofocus><br>
 				<label for="prenom">Prénom</label> : <input type="text" name="prenom" id="prenom"><br>
 				<input type="checkbox" name="estSauve" id="estSauve" /> <label for="estSauve">Sauveteur ? (si non coché, alors sauvé)</label><br>
-				<label for="date">Date</label> : <input type="text" name="date" id="date"><br>
+				<label for="date">Date</label> : <input type="date" name="date" id="date"><br>
 				<label for="bateau">Bateau</label> : <input type="text" name="bateau" id="bateau"><br>
 				<label>Informations complémentaires :</label><br>
 				<textarea name="informations" id="informations"></textarea>
