--- a/index.html
+++ b/index.html
@@ -6,32 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/global_style.css">
     <link rel="stylesheet" type="text/css" href="css/index_style.css">
+    <link rel="icon" type="image/png" href="img/thomaspesquet.png">
     <script src="https://kit.fontawesome.com/798abe29a3.js" crossorigin="anonymous"></script>
     <title>Accueil - Sauveteurs du dunkerquois</title>
 </head>
 <body>
     <header>
-        <a class="link-home font-title" href="index.html" title="Accueil">Sauveteurs du dunkerquois</a>
-        <nav class="menu-header">
-            <ul class="menu-social">
-                <li class="menu-link"><a href="https://www.facebook.com/groups/938396409644949"><i class="fab fa-facebook"></i></a></li>
-                <li class="menu-link"><a href="https://twitter.com/@boutelierphili1"><i class="fab fa-twitter"></i></a></li>
-                <li class="menu-link"><a href="mailto:sauveteurdudunkerquois@gmail.com"><i class="fas fa-envelope"></i></a></li>
-                <li class="menu-link"><a href="form.html"><i class="fas fa-toilet-paper"></i></a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
+        <div class="header-links">
+            <a class="link-home font-title" href="index.html" title="Accueil">Sauveteurs du dunkerquois</a>
+            <nav class="menu-header">
+                <ul class="menu-social">
+                    <li class="menu-link"><a href="https://www.facebook.com/groups/938396409644949"><i class="fab fa-facebook"></i></a></li>
+                    <li class="menu-link"><a href="https://twitter.com/@boutelierphili1"><i class="fab fa-twitter"></i></a></li>
+                    <li class="menu-link"><a href="mailto:sauveteurdudunkerquois@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                    <li class="menu-link"><a href="form.html"><i class="fas fa-toilet-paper"></i></a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="banner">
-            <label for="search" class="font-default">270 ans d'histoire</label>
+            <label for="search" class="label-search font-default">270 ans d'histoire</label>
         </div>
         <div class="search-section">
-            <input type="search" id="search" class="search-bar font-default" value="Taper pour rechercher...">
-            <i class="fas fa-search"></i>
+            <input type="search" id="search" class="search-bar font-default" placeholder="Personne, bateau, mission...">
+            <button class="btn-search clickable"><i class="fas fa-search"></i></button>
+            <i class="fas fa-chevron-down"></i> 
         </div>
-        <section id="presentation">
-            <h2 class="font-title">Bienvenue</h2>
-        </section>
+    </header>
+    <main>
+        
     </main>
     <footer>
 
