--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
 <body>
 	<?php include('include/header.html');?>
 	<main>
-		<form action="form.php" method="post" class="form-advanced">
+		<form action="formRecu.php" method="post" class="form-advanced">
 			<div class="form-line">
 				<label for="nom" class="label-form">Nom</label>
 				<input type="text" name="nom" id="nom" class="input-form" autofocus>
